--- a/public/index.html
+++ b/public/index.html
@@ -37,36 +37,43 @@
         </nav>
       </div>
 
+      <!-- Home content -->
       <div class="home-content">
+        <!-- Terminal -->
         <div class="terminal">
-          <span class="const const-color"></span>
-          <span class="var"></span>
-          <span class="equal"></span>
-          <span class="bracket-f"></span><br />&nbsp;&nbsp;&nbsp;&nbsp;
-          <span class="name-1"></span>
-          <span class="colon-1"></span>
-          <span class="value-1"></span><br />&nbsp;&nbsp;&nbsp;&nbsp;
-          <span class="name-2"></span>
-          <span class="colon-2"></span>
-          <span class="value-2"></span><br />&nbsp;&nbsp;&nbsp;&nbsp;
-          <span class="name-3"></span>
-          <span class="colon-3"></span>
-          <span class="value-3"></span><br />&nbsp;&nbsp;&nbsp;&nbsp;
-          <span class="name-4"></span>
-          <span class="colon-4"></span>
-          <span class="value-4"></span><br />
-          <span class="bracket-l"></span>
+          <span class="const const-color"></span><span class="var"></span
+          ><span class="equal"></span><span class="bracket-f"></span
+          ><br />&nbsp;&nbsp;&nbsp;&nbsp;<span class="name-1"></span
+          ><span class="colon-1"></span><span class="value-1"></span
+          ><br />&nbsp;&nbsp;&nbsp;&nbsp;<span class="name-2"></span
+          ><span class="colon-2"></span><span class="value-2"></span
+          ><br />&nbsp;&nbsp;&nbsp;&nbsp;<span class="name-3"></span
+          ><span class="colon-3"></span><span class="value-3"></span
+          ><br />&nbsp;&nbsp;&nbsp;&nbsp;<span class="name-4"></span
+          ><span class="colon-4"></span><span class="value-4"></span><br /><span
+            class="bracket-l"
+          ></span
+          ><br /><br /><br /><span class="func"></span
+          ><span class="open-parentheses"></span><span class="param"></span
+          ><span class="close-parentheses"></span>
         </div>
+        <!-- content -->
         <div class="content">
           <div class="personal-img">
             <img src="img/circle-cropped.png" alt="vladimir" />
           </div>
-          <a href="#">Learn More!</a>
+          <a href="#about">Learn More!</a>
         </div>
       </div>
     </section>
 
-    <footer></footer>
+    <!-- About -->
+    <section class="about"></section>
+
+    <!-- Footer -->
+    <footer>
+      <p class="copyright"></p>
+    </footer>
   </body>
 
   <script src="./scripts/bundle.js"></script>
