Contact and Footer added

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
 
     <!-- About -->
     <section id="about">
-      <h1>About Me</h1>
+      <h2>About Me</h2>
       <div class="cards-container">
         <div id="education" class="card">
           <i class="fas fa-graduation-cap fa-2x"></i>
@@ -112,6 +112,34 @@
         <div id="army" class="card">
           <i class="fas fa-anchor fa-2x"></i>
           <p>I served in the Israeli Navy for three years as a technician.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Me -->
+    <section id="contact">
+      <div class="contact-container">
+        <h2>Contact Me</h2>
+        <div class="contact-info-container">
+          <div class="contact-info">
+            <i class="fas fa-mobile-alt fa-2x"></i>
+            <p>0526980605</p>
+          </div>
+          <div class="contact-info">
+            <i class="fas fa-envelope-open fa-2x"></i>
+            <p>vladimirvslovo@gmail.com</p>
+          </div>
+        </div>
+        <div class="social">
+          <a href="https://github.com/V0vaSL" target="_blank"
+            ><i class="fab fa-github fa-2x"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/vova-slovo-3a61b2130/"
+            target="_blank"
+            ><i class="fab fa-linkedin fa-2x"></i
+          ></a>
+          <a href="" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
         </div>
       </div>
     </section>
