Card animation added and new background

--- a/public/index.html
+++ b/public/index.html
@@ -79,8 +79,8 @@
           <i class="fas fa-graduation-cap fa-2x"></i>
           <p>
             I'm a Computer Science student at the Open University of Israel. I
-            have four semesters left until graduation. My current GPA is 88. You
-            can find my grades sheet in the navigation bar.
+            have 4 semesters left until graduation. My current GPA is 88. Grades
+            sheet can be found at the navigation bar.
           </p>
         </div>
         <div id="skills" class="card">
@@ -111,7 +111,7 @@
         </div>
         <div id="army" class="card">
           <i class="fas fa-anchor fa-2x"></i>
-          <p>I served in the Israeli Navy for three years as a technician.</p>
+          <p>I served in the Israeli Navy for 3 years as a technician.</p>
         </div>
       </div>
     </section>
@@ -131,7 +131,7 @@
           </div>
         </div>
         <div class="social">
-          <a href="https://github.com/V0vaSL" target="_blank"
+          <a href="https://github.com/V0vaSL?tab=repositories" target="_blank"
             ><i class="fab fa-github fa-2x"></i
           ></a>
           <a
@@ -139,7 +139,9 @@
             target="_blank"
             ><i class="fab fa-linkedin fa-2x"></i
           ></a>
-          <a href="" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+          <a href="https://twitter.com/SlovoVladimir" target="_blank"
+            ><i class="fab fa-twitter fa-2x"></i
+          ></a>
         </div>
       </div>
     </section>
