index.html moved out of public

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- My Styles -->
-    <link rel="stylesheet" href="css/index.css" />
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="public/css/index.css" />
+    <link
+      rel="shortcut icon"
+      href="public/img/favicon.ico"
+      type="image/x-icon"
+    />
     <link
       rel="stylesheet"
       media="screen and (max-width :900px)"
-      href="css/mobile.css"
+      href="public/css/mobile.css"
     />
     <!-- Font Awsome -->
     <link
@@ -35,7 +39,7 @@
           <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="Grades.pdf" target="_blank">Grades</a></li>
+            <li><a href="public/Grades.pdf" target="_blank">Grades</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
           <!-- Hamburder Menu -->
@@ -48,7 +52,9 @@
                   <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="Grades.pdf" target="_blank">Grades</a></li>
+                    <li>
+                      <a href="public/Grades.pdf" target="_blank">Grades</a>
+                    </li>
                     <li><a href="#contact">Contact</a></li>
                   </ul>
                 </div>
@@ -85,7 +91,7 @@
           <div class="content">
             <div class="center-container">
               <div class="personal-img">
-                <img src="img/circle-cropped.png" alt="vladimir" />
+                <img src="public/img/circle-cropped.png" alt="vladimir" />
               </div>
               <p>
                 I'm looking for an entry level, Full-Stack/Back-End developer
@@ -189,5 +195,5 @@
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- My scripts -->
-  <script src="./scripts/bundle.js"></script>
+  <script src="public/scripts/bundle.js"></script>
 </html>
