index.html updated

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="content">
             <div class="center-container">
               <div class="personal-img">
-                <img src="public/img/circle-cropped.png" alt="vladimir" />
+                <img src="public/img/circle-cropped.jpg" alt="vladimir" />
               </div>
               <p>
                 I'm looking for an entry level, Full-Stack/Back-End developer
