--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <!-- Meta -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta
+      name="google-site-verification"
+      content="yKXBH2QkL6he4UzCUPmfskSAEZwKGXMu7qYWE23etHo"
+    />
     <!-- My Styles -->
     <link rel="stylesheet" href="public/css/index.css" />
     <link
