project section added

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="public/Grades.pdf" target="_blank">Grades</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -55,6 +56,7 @@
                   <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
                     <li>
                       <a href="public/Grades.pdf" target="_blank">Grades</a>
                     </li>
@@ -96,10 +98,7 @@
               <div class="personal-img">
                 <img src="public/img/circle-cropped.png" alt="vladimir" />
               </div>
-              <p>
-                I'm looking for an entry level, Full-Stack/Back-End developer
-                position.
-              </p>
+              <p>I'm looking for an entry level developer position.</p>
               <a href="#about">Learn More!</a>
             </div>
           </div>
@@ -115,7 +114,7 @@
           <i class="fas fa-graduation-cap fa-2x"></i>
           <p>
             I'm a Computer Science student at the Open University of Israel. I
-            have 4 semesters left until graduation. My current GPA is 88.
+            have 3 semesters left until graduation. My current GPA is 88.
           </p>
         </div>
         <div id="skills" class="card">
@@ -151,6 +150,29 @@
       </div>
     </section>
 
+    <!-- Projects -->
+    <section id="projects">
+      <h2>Projects</h2>
+      <div class="cards-container">
+        <a
+          href="https://infinite-scrubland-90796.herokuapp.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <div id="bookMark" class="card">
+            <img src="public/img/bookMark.jpg" alt="bookMark app logo" />
+            <div class="info">
+              <h3>BookMark App</h3>
+              <p>
+                Description : An app for logging books you're reading, want to
+                read and completed reading.<br />Front-End : React<br />Back-End
+                : Node.js<br />Database : MySQL
+              </p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </section>
     <!-- Contact Me -->
     <section id="contact">
       <div class="contact-container">
