--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <div class="personal-img">
                 <img src="public/img/circle-cropped.png" alt="vladimir" />
               </div>
-              <p>I'm looking for an entry level developer position.</p>
+              <p>I'm looking for a challenging R&D entry level position.</p>
               <a href="#about">Learn More!</a>
             </div>
           </div>
@@ -122,17 +122,20 @@
           <p>
             I have academic experience with <span class="tech">C</span> ,
             <span class="tech">C++</span> , <span class="tech">Java</span>,
-            <span class="tech">SQL</span> and <span class="tech">Linux</span>. I
-            am currently studying web development independently. Front-End:
+            <span class="tech">SQL</span> and
+            <span class="tech">Linux</span>.<br />
+            I am currently studying web development independently.<br />
+            I’ve built my personal website using
             <span class="tech">HTML</span> ,
             <span class="tech">CSS</span>
-            , <span class="tech">JavaScript</span> ,
-            <span class="tech">React</span> . Back-End:
+            , <span class="tech">JavaScript</span>.<br />
+            I’ve built a web app using <span class="tech">React</span>,
             <span class="tech">Node.js</span> ,
             <span class="tech">Express.js</span> ,
-            <span class="tech">MongoDB</span> ,
-            <span class="tech">Mongoose</span> . I'm familiar with using
-            <span class="tech">Git</span> and <span class="tech">GitHub</span> .
+            <span class="tech">MySQL</span>. It is an app for logging books a
+            user is reading, want to read and completed reading.<br />I'm
+            familiar with using <span class="tech">mongoDB </span> and
+            <span class="tech">Mongoose</span> .
           </p>
         </div>
 
