--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="public/Grades.pdf" target="_blank">Grades</a></li>
+            <li><a href="public/cv.pdf" target="_blank">CV</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
           <!-- Hamburder Menu -->
@@ -58,7 +58,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li>
-                      <a href="public/Grades.pdf" target="_blank">Grades</a>
+                      <a href="public/cv.pdf" target="_blank">CV</a>
                     </li>
                     <li><a href="#contact">Contact</a></li>
                   </ul>
