--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="public/cv.pdf" target="_blank">CV</a></li>
+            <li>
+              <a href="public/Grades-compressed.pdf" target="_blank">Grades</a>
+            </li>
             <li><a href="#contact">Contact</a></li>
           </ul>
           <!-- Hamburder Menu -->
@@ -58,7 +60,9 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li>
-                      <a href="public/cv.pdf" target="_blank">CV</a>
+                      <a href="public/Grades-compressed.pdf" target="_blank"
+                        >Grades</a
+                      >
                     </li>
                     <li><a href="#contact">Contact</a></li>
                   </ul>
