--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
               <div class="personal-img">
                 <img src="public/img/circle-cropped.png" alt="vladimir" />
               </div>
-              <p>I'm looking for a challenging R&D entry level position.</p>
+              <p>
+                I'm looking for a full-time/part-time entry level R&D position.
+              </p>
               <a href="#about">Learn More!</a>
             </div>
           </div>
