--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
             I’ve built a web app using <span class="tech">React</span>,
             <span class="tech">Node.js</span> ,
             <span class="tech">Express.js</span> ,
-            <span class="tech">MySQL</span>. It is an app for logging books a
-            user is reading, want to read and completed reading.<br />I'm
+            <span class="tech">MySQL</span>. It is an app for logging books.<br />I'm
             familiar with using <span class="tech">mongoDB </span> and
             <span class="tech">Mongoose</span> .
           </p>
@@ -173,9 +172,8 @@
             <div class="info">
               <h3>BookMark App</h3>
               <p>
-                Description : An app for logging books you're reading, want to
-                read and completed reading.<br />Front-End : React<br />Back-End
-                : Node.js<br />Database : MySQL
+                Description : An app for logging books.<br />Front-End :
+                React<br />Back-End : Node.js<br />Database : MySQL
               </p>
             </div>
           </div>
