--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="google-site-verification"
       content="yKXBH2QkL6he4UzCUPmfskSAEZwKGXMu7qYWE23etHo"
     />
+    <meta name="description" content="This is my personal website. You can find information about my education, skills, projects and ways to contact me."/>
     <!-- My Styles -->
     <link rel="stylesheet" href="public/css/index.css" />
     <link
