CSS fix and meta tags added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
+      name="description"
+      content="My personal website. You can find information about my education,skills and projects."
+    />
+    <meta
+      name="keywords"
+      content="Vladimir Slovo software developer engineer full-stack student"
+    />
+    <meta name="author" content="John Doe" />
+    <meta
       name="google-site-verification"
       content="yKXBH2QkL6he4UzCUPmfskSAEZwKGXMu7qYWE23etHo"
     />
