Bookmark app description updated.

--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
             <div class="info">
               <h3>BookMark App</h3>
               <p>
-                Description : An app for logging books.<br />Front-End :
-                React<br />Back-End : Node.js<br />Database : MySQL
+                Description : Virtual book library.<br />Front-End : React<br />Back-End
+                : Node.js<br />Database : MySQL
               </p>
             </div>
           </div>
